--- a/views/pages/products-list.ejs
+++ b/views/pages/products-list.ejs
@@ -38,7 +38,7 @@
 
 <body>
     <div class="container">
-        <% if(nuevo.title==='' || nuevo.price==='' || nuevo.thumbnail==='' || productos.length===0 ){ %>
+        <% if(productos.length===0 ){ %>
             <h1>No hay productos.</h1>
             <% } else { %>
                 <table class="table table-bordered">
